Add reformatted and fixed timecourse processing and subsetting scripts

--- a/processing_notebooks/timecourse_subsetting_simple.Rmd
+++ b/processing_notebooks/timecourse_subsetting_simple.Rmd
@@ -12,12 +12,13 @@ library(dplyr)
 library(tidyr)
 library(viridis)
 library(matrixStats)
+library(ggplot2)
 ```
 
 # Load data
 ```{r}
 seurat <- readRDS("../data/seurat_unfiltered.rds")
-cc.genes <- readLines(con = "~/Data/GeneLists/regev_lab_cell_cycle_genes.txt")
+cc.genes <- readLines(con = "../regev_lab_cell_cycle_genes.txt")
 s.genes <- cc.genes[1:43]
 g2m.genes <- cc.genes[44:97]
 ```
@@ -210,6 +211,7 @@ getSeuratSubset <- function(cell_line, treatment){
                                do.correct.umi=T,
                                vars.to.regress=c("S.Score", "G2M.Score",
                                                  "percent.mito"),
+                               ncells = 10000,
                                batch_var="Mix",
                                return_gene_attr=T,
                                variable.features.n=2000)
@@ -240,7 +242,7 @@ getSeuratSubset <- function(cell_line, treatment){
 # Subset the data
 ```{r}                                                                       
 a549_tgfb1 <- getSeuratSubset("A549", "TGFB1")
-a549_tnf <- getSeuratSubset("A549", "TNF") 
+a549_tnf <- getSeuratSubset("A549", "TNF")
 a549_egf <- getSeuratSubset("A549", "EGF") 
 
 du145_tgfb1 <- getSeuratSubset("DU145", "TGFB1")
